# amux

./: CONFIG_GUIDE.md  Cargo.toml  README.md  install.sh  release.toml
.github/workflows/: ci.yml  release.yml
amux-cli/: Cargo.toml
amux-cli/src/: attach.rs  client.rs  error.rs  main.rs
amux-cli/src/tui/: icons.rs  layout.rs  mod.rs  state.rs  theme.rs
amux-cli/src/tui/app/: comments.rs  diff.rs  events.rs  git_ops.rs  input_forms.rs  mod.rs  repo.rs  terminal.rs  todo.rs
amux-cli/src/tui/input/: mod.rs  mouse.rs  prefix.rs  resolver.rs
amux-cli/src/tui/overlays/: dialogs.rs  input.rs
amux-cli/src/tui/views/diff/: input.rs  mod.rs  render.rs
amux-cli/src/tui/views/git_status/: input.rs  mod.rs  render.rs
amux-cli/src/tui/views/sidebar/: input.rs  render.rs
amux-cli/src/tui/views/tab_bar/: mod.rs  render.rs
amux-cli/src/tui/views/terminal/: input.rs  render.rs
amux-cli/src/tui/views/todo/: input.rs  mod.rs  render.rs
amux-cli/src/tui/widgets/: helpers.rs  text_input.rs  virtual_list.rs
amux-config/: Cargo.toml  README.md
amux-config/src/: actions.rs  commands.rs  config.rs  defaults.rs  keybind.rs  lib.rs  types.rs
amux-daemon/: Cargo.toml
amux-daemon/src/: claude_session.rs  diff.rs  error.rs  events.rs  git.rs  main.rs  persistence.rs  pty.rs  repo.rs  review.rs  server.rs  session.rs  state.rs  todo.rs
amux-daemon/src/handlers/: attach.rs  comments.rs  diff.rs  events.rs  git_status.rs  mod.rs  provider.rs  repo.rs  session.rs  todo.rs  worktree.rs
amux-daemon/src/providers/: claude.rs  codex.rs  mock.rs  mod.rs  registry.rs
amux-proto/: Cargo.toml
amux-proto/proto/: daemon.proto
ccm-cli/: Cargo.toml
ccm-cli/src/: attach.rs  client.rs  error.rs  main.rs
ccm-cli/src/tui/: app.rs  highlight.rs  input.rs  layout.rs  mod.rs  navigation.rs  state.rs  ui.rs
ccm-cli/src/tui/app/: comments.rs  diff.rs  events.rs  git_ops.rs  input_forms.rs  mod.rs  repo.rs  terminal.rs  todo.rs
ccm-cli/src/tui/input/: dialogs.rs  diff.rs  git_status.rs  mod.rs  mouse.rs  navigation.rs  prefix.rs  resolver.rs  terminal.rs  todo.rs  utils.rs
ccm-cli/src/tui/overlays/: dialogs.rs  input.rs  mod.rs
ccm-cli/src/tui/ui/: diff.rs  git_panel.rs  helpers.rs  mod.rs  overlays.rs  sidebar.rs  tab_bar.rs  terminal.rs
ccm-cli/src/tui/views/: mod.rs
ccm-cli/src/tui/views/diff/: input.rs  render.rs
ccm-cli/src/tui/views/git_status/: input.rs  render.rs
ccm-cli/src/tui/views/sidebar/: input.rs  mod.rs  render.rs
ccm-cli/src/tui/views/tab_bar/: render.rs
ccm-cli/src/tui/views/terminal/: input.rs  mod.rs  render.rs
ccm-cli/src/tui/views/todo/: input.rs  mod.rs  render.rs
ccm-cli/src/tui/widgets/: mod.rs  text_input.rs  virtual_list.rs
ccm-cli/tests/: test_virtual_list.rs
ccm-config/: Cargo.toml  README.md
ccm-config/src/: actions.rs  config.rs  defaults.rs  keybind.rs  lib.rs  parser.rs  writer.rs
ccm-daemon/: Cargo.toml
ccm-daemon/src/: claude_session.rs  error.rs  events.rs  file_watcher.rs  git.rs  main.rs  persistence.rs  pty.rs  repo.rs  review.rs  server.rs  session.rs  state.rs  todo.rs
ccm-daemon/src/handlers/: attach.rs  comments.rs  diff.rs  events.rs  git_status.rs  repo.rs  session.rs  todo.rs  worktree.rs
ccm-proto/: Cargo.toml
ccm-proto/proto/: daemon.proto
ccm-proto/src/: lib.rs
docs/: DIFF_VIEW_DESIGN.md  GIT_PANEL_DESIGN.md  MVP_PLAN.md  REFACTORING_PLAN.md  TODO_FEATURE_DESIGN.md
docs/v1/: DIFF_VIEW_DESIGN.md  GIT_PANEL_DESIGN.md  INTERACTION_IMPROVEMENTS.md  MVP_PLAN.md  TODO_FEATURE_DESIGN.md  TUI_PERFORMANCE_OPTIMIZATION.md
xtask/: Cargo.toml
xtask/src/: main.rs
