[workspace]
resolver = "2"
members = [
    "amux-proto",
    "amux-config",
    "amux-cli",
    "amux-daemon",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Amux Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.21"

# System
nix = { version = "0.29", features = ["term", "signal", "process", "fs"] }
libc = "0.2"
bytes = "1"

# Terminal
crossterm = "0.28"

# Git
git2 = "0.19"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev tools
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }

[workspace.metadata.husky]
# Husky hook configuration
