[package]
name = "ccm-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ccm-daemon"
path = "src/main.rs"

[dependencies]
ccm-proto = { path = "../ccm-proto" }
tokio.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
git2.workspace = true
nix.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream = "0.1"
dirs = "5"
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
async-stream = "0.3"
uuid = { version = "1.0", features = ["v4"] }
libc.workspace = true
vt100 = "0.15"

[dev-dependencies]
tempfile = "3"
